--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
     <header>
         <div class="mainheader">
             <div>
+                <a href="https://a2zweb.github.io/ashutoshpharma.com/">
                 <img src="logo.png" alt="" class="logo">
+                </a>
             </div>
             <nav>
                 <a href="#" target="_blank">Home</a>
